--- a/examples/local_llm/local_llm.ipynb
+++ b/examples/local_llm/local_llm.ipynb
@@ -127,7 +127,7 @@
      "output_type": "stream",
      "text": [
       "User: What is Ragna?\n",
-      "Assistant: Ragna is an open-source application (OSS) for RAG workflows. It offers a Python and REST API as well as a web UI.\n"
+      "Assistant: Ragna is an OSS app for RAG workflows that offers a Python and REST API as well as web UI.\n"
      ]
     }
    ],
@@ -143,13 +143,14 @@
     "        \"Ragna is an OSS app for RAG workflows that offers a Python and REST API as well as web UI\\n\"\n",
     "    )\n",
     "\n",
-    "async with await rag.new_chat(\n",
+    "async with rag.chat(\n",
     "    documents=[path],\n",
     "    source_storage=RagnaDemoSourceStorage,\n",
     "    assistant=AiroborosAssistant,\n",
     ") as chat:\n",
     "    prompt = \"What is Ragna?\"\n",
-    "    answer = await chat.answer(prompt)\n",
+    "    message = await chat.answer(prompt)\n",
+    "    answer = message.content\n",
     "\n",
     "print(f\"User: {prompt}\")\n",
     "print(f\"Assistant: {answer}\")"
