--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite://', queue_database_url='memory', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='16d97e7eb82eaa866805280bf3e4302b8d459fa70e1c77753fdaa8ad047fa55f', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
+       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite://', queue_database_url='memory', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='9ffa4b72f96f221953a455df1642304af954a0afa7d147ae96cc1aa62a89ed02', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
       ]
      },
      "execution_count": 3,
@@ -127,10 +127,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7ff6b6164ac0>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7ff6b6164b40>,\n",
-      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7ff6b6164bc0>,\n",
-      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7ff6b6164c40>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7fa6a15e48c0>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7fa6a15e4b40>,\n",
+      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7fa6a15e4bc0>,\n",
+      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7fa6a15e4c40>}\n"
      ]
     }
    ],
@@ -149,7 +149,8 @@
     "        source_storage=source_storage,\n",
     "        assistant=assistant,\n",
     "    ) as chat:\n",
-    "        return await chat.answer(prompt)\n",
+    "        message = await chat.answer(prompt)\n",
+    "        return message.content\n",
     "\n",
     "\n",
     "experiments = {\n",
@@ -176,10 +177,35 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): Message(content='Ragna is an open-source RAG (Response Analysis Graph) orchestration app. It is designed to help users create conversational AI applications by providing a framework for managing and orchestrating the flow of conversations. Ragna allows developers to define conversation flows, handle user inputs, and generate dynamic responses based on predefined rules and logic. It is built on top of the Rasa framework and provides additional features and functionalities to simplify the development process.', role=<MessageRole.ASSISTANT: 'assistant'>, sources=[Source(id='4afc4718-c8b0-4d3b-b103-24ecfce42a99', document=<ragna.core.LocalDocument object at 0x7ff6b406a640>, location='', content='Ragna is an open-source RAG orchestration app\\n', num_tokens=12)]),\n",
-      " ('Chroma', 'OpenAI/gpt-4'): Message(content='Ragna is an open-source RAG orchestration app.', role=<MessageRole.ASSISTANT: 'assistant'>, sources=[Source(id='519efd9e-a464-4261-8589-30f7be716b6a', document=<ragna.core.LocalDocument object at 0x7ff6aff5e190>, location='', content='Ragna is an open-source RAG orchestration app\\n', num_tokens=12)]),\n",
-      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): Message(content='Ragna is an open-source rag orchestration app. It is a software application that allows users to create and arrange musical compositions using ragtime music. It is designed to be accessible and customizable for musicians and composers.', role=<MessageRole.ASSISTANT: 'assistant'>, sources=[Source(id='882b2ec7-2c63-44c8-8633-ce9b012869c5', document=<ragna.core.LocalDocument object at 0x7ff46c233910>, location='', content='[CLS] ragna is an open-source rag orchestration app[SEP]', num_tokens=12)]),\n",
-      " ('LanceDB', 'OpenAI/gpt-4'): Message(content='Ragna is an open-source rag orchestration app.', role=<MessageRole.ASSISTANT: 'assistant'>, sources=[Source(id='693d2edb-4925-40f7-b25e-d5ed686670a5', document=<ragna.core.LocalDocument object at 0x7ff46b7389d0>, location='', content='[CLS] ragna is an open-source rag orchestration app[SEP]', num_tokens=12)])}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
+      "                                         '(Response Analysis Graph) '\n",
+      "                                         'orchestration app. It is designed to '\n",
+      "                                         'help users create conversational AI '\n",
+      "                                         'applications by providing a '\n",
+      "                                         'framework for managing and '\n",
+      "                                         'orchestrating the flow of '\n",
+      "                                         'conversations. Ragna allows '\n",
+      "                                         'developers to define conversation '\n",
+      "                                         'flows, handle user inputs, and '\n",
+      "                                         'generate dynamic responses based on '\n",
+      "                                         'predefined rules and logic. It is '\n",
+      "                                         'built on top of the Rasa framework '\n",
+      "                                         'and provides additional features and '\n",
+      "                                         'functionalities to simplify the '\n",
+      "                                         'development process.',\n",
+      " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app. '\n",
+      "                             'Unfortunately, without additional context or '\n",
+      "                             \"sources, I can't provide more detailed \"\n",
+      "                             'information about it.',\n",
+      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source rag '\n",
+      "                                          'orchestration app. It is a software '\n",
+      "                                          'application that allows users to '\n",
+      "                                          'create and arrange musical '\n",
+      "                                          'compositions using ragtime music. '\n",
+      "                                          'It is designed to be accessible and '\n",
+      "                                          'customizable for musicians and '\n",
+      "                                          'composers.',\n",
+      " ('LanceDB', 'OpenAI/gpt-4'): 'Ragna is an open-source rag orchestration app.'}\n"
      ]
     }
    ],
