--- a/examples/rest_api/rest_api.ipynb
+++ b/examples/rest_api/rest_api.ipynb
@@ -44,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [29282]\n",
+      "INFO:     Started server process [32871]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
       "INFO:     Uvicorn running on http://127.0.0.1:31476 (Press CTRL+C to quit)\n"
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET / HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:43564 - \"GET / HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
       "[]\n"
      ]
     }
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"GET /components?user=Ragna HTTP/1.1\" 200 OK\n",
       "{'assistants': ['Ragna/DemoAssistant'],\n",
       " 'source_storages': ['Ragna/DemoSourceStorage']}\n"
      ]
@@ -229,9 +229,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET /document?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
-      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImNmYzkyODNjLTI0N2YtNDM2Mi05ZmM2LTY3YmZhMGQ3NTRmMCIsImV4cCI6MTY5NzExMzAwMC41MzczNDIzfQ.LiEYw4upNzreislOEY2y3FJNwXvXgaXedkLyXANtXvU'},\n",
-      " 'document': {'id': 'cfc9283c-247f-4362-9fc6-67bfa0d754f0',\n",
+      "INFO:     127.0.0.1:43564 - \"GET /document?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
+      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImZlZTE4ZDc1LTE3NWQtNDdjOS05MTZhLTM1MTIxNzhhNDUwYiIsImV4cCI6MTY5NzExNDcwOS45OTgwOTU1fQ.3i1s_xc-nRFTuj8hlczipsZk0F7X1Vo5A9kmSau-guI'},\n",
+      " 'document': {'id': 'fee18d75-175d-47c9-916a-3512178a450b',\n",
       "              'name': 'document0.txt'},\n",
       " 'url': 'http://127.0.0.1:31476/document'}\n"
      ]
@@ -264,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"POST /document HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:43564 - \"POST /document HTTP/1.1\" 200 OK\n"
      ]
     }
    ],
@@ -295,18 +295,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET /document?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:52656 - \"POST /document HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:52656 - \"GET /document?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:52656 - \"POST /document HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:43564 - \"GET /document?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"POST /document HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"GET /document?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"POST /document HTTP/1.1\" 200 OK\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'id': 'cfc9283c-247f-4362-9fc6-67bfa0d754f0', 'name': 'document0.txt'},\n",
-       " {'id': '158895b0-406d-4a1d-91e5-f6e455cdc179', 'name': 'document1.txt'},\n",
-       " {'id': '87bbbc51-e699-43bb-826c-a67fdfe1b5e6', 'name': 'document2.txt'}]"
+       "[{'id': 'fee18d75-175d-47c9-916a-3512178a450b', 'name': 'document0.txt'},\n",
+       " {'id': '8c73c112-45a9-457d-ada8-87b3e63e5b9a', 'name': 'document1.txt'},\n",
+       " {'id': 'd62a61ec-c877-403f-8723-19b647397edc', 'name': 'document2.txt'}]"
       ]
      },
      "execution_count": 9,
@@ -349,17 +349,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"POST /chats?user=Ragna HTTP/1.1\" 200 OK\n",
-      "{'id': 'c8436430-3017-4ec8-86e0-1ca099d97af6',\n",
+      "INFO:     127.0.0.1:43564 - \"POST /chats?user=Ragna HTTP/1.1\" 200 OK\n",
+      "{'id': '9d2e7a49-3030-4ea8-a2a2-1e0b7dad7f86',\n",
       " 'metadata': {'name': 'Ragna REST API example',\n",
       "              'source_storage': 'Ragna/DemoSourceStorage',\n",
       "              'assistant': 'Ragna/DemoAssistant',\n",
       "              'params': {},\n",
-      "              'documents': [{'id': 'cfc9283c-247f-4362-9fc6-67bfa0d754f0',\n",
+      "              'documents': [{'id': 'fee18d75-175d-47c9-916a-3512178a450b',\n",
       "                             'name': 'document0.txt'},\n",
-      "                            {'id': '158895b0-406d-4a1d-91e5-f6e455cdc179',\n",
+      "                            {'id': '8c73c112-45a9-457d-ada8-87b3e63e5b9a',\n",
       "                             'name': 'document1.txt'},\n",
-      "                            {'id': '87bbbc51-e699-43bb-826c-a67fdfe1b5e6',\n",
+      "                            {'id': 'd62a61ec-c877-403f-8723-19b647397edc',\n",
       "                             'name': 'document2.txt'}]},\n",
       " 'messages': [],\n",
       " 'prepared': False}\n"
@@ -387,7 +387,7 @@
    "id": "d7b74f96-3e02-4a70-8d54-c34d73f706bd",
    "metadata": {},
    "source": [
-    "As indicated by the `'started': False` in the response, we need to start our chat before we can start the interogation. In this step we extract the data out of the uploaded documents and store them in our source storage"
+    "As indicated by the `'prepared': False` in the response, we need to prepare our chat before we can start the interogation. In this step we extract the data out of the uploaded documents and store them in our source storage"
    ]
   },
   {
@@ -400,28 +400,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"POST /chats/c8436430-3017-4ec8-86e0-1ca099d97af6/prepare?user=Ragna HTTP/1.1\" 200 OK\n",
-      "{'message': {'id': '24751923-832b-4da4-957f-2ee9ae1414f9',\n",
+      "INFO:     127.0.0.1:43564 - \"POST /chats/9d2e7a49-3030-4ea8-a2a2-1e0b7dad7f86/prepare?user=Ragna HTTP/1.1\" 200 OK\n",
+      "{'message': {'id': 'a1a3b272-7145-4459-b89c-1de258bb7cff',\n",
       "             'content': 'How can I help you with the documents?',\n",
       "             'role': 'system',\n",
       "             'sources': [],\n",
-      "             'timestamp': '2023-10-12T12:16:11.520052+00:00'},\n",
-      " 'chat': {'id': 'c8436430-3017-4ec8-86e0-1ca099d97af6',\n",
+      "             'timestamp': '2023-10-12T12:44:40.986403+00:00'},\n",
+      " 'chat': {'id': '9d2e7a49-3030-4ea8-a2a2-1e0b7dad7f86',\n",
       "          'metadata': {'name': 'Ragna REST API example',\n",
       "                       'source_storage': 'Ragna/DemoSourceStorage',\n",
       "                       'assistant': 'Ragna/DemoAssistant',\n",
       "                       'params': {},\n",
-      "                       'documents': [{'id': '158895b0-406d-4a1d-91e5-f6e455cdc179',\n",
+      "                       'documents': [{'id': '8c73c112-45a9-457d-ada8-87b3e63e5b9a',\n",
       "                                      'name': 'document1.txt'},\n",
-      "                                     {'id': '87bbbc51-e699-43bb-826c-a67fdfe1b5e6',\n",
+      "                                     {'id': 'd62a61ec-c877-403f-8723-19b647397edc',\n",
       "                                      'name': 'document2.txt'},\n",
-      "                                     {'id': 'cfc9283c-247f-4362-9fc6-67bfa0d754f0',\n",
+      "                                     {'id': 'fee18d75-175d-47c9-916a-3512178a450b',\n",
       "                                      'name': 'document0.txt'}]},\n",
-      "          'messages': [{'id': '24751923-832b-4da4-957f-2ee9ae1414f9',\n",
+      "          'messages': [{'id': 'a1a3b272-7145-4459-b89c-1de258bb7cff',\n",
       "                        'content': 'How can I help you with the documents?',\n",
       "                        'role': 'system',\n",
       "                        'sources': [],\n",
-      "                        'timestamp': '2023-10-12T12:16:11.520052+00:00'}],\n",
+      "                        'timestamp': '2023-10-12T12:44:40.986403+00:00'}],\n",
       "          'prepared': True}}\n"
      ]
     }
@@ -452,8 +452,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"POST /chats/c8436430-3017-4ec8-86e0-1ca099d97af6/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
-      "{'id': 'af9a98d1-4b2e-4fc5-917e-894e0269322c',\n",
+      "INFO:     127.0.0.1:43564 - \"POST /chats/9d2e7a49-3030-4ea8-a2a2-1e0b7dad7f86/answer?user=Ragna&prompt=What%20is%20Ragna%3F HTTP/1.1\" 200 OK\n",
+      "{'id': 'b96faacd-e941-4d81-ae3c-0dfcbb1bf5df',\n",
       " 'content': \"I can't really help you with your prompt:\\n\"\n",
       "            '\\n'\n",
       "            '> What is Ragna?\\n'\n",
@@ -464,19 +464,19 @@
       "            '- document2.txt: This is content of document 2\\n'\n",
       "            '- document0.txt: This is content of document 0',\n",
       " 'role': 'assistant',\n",
-      " 'sources': [{'id': 'd0d29316-87eb-4a33-a68a-2c6f3ffc2c49',\n",
-      "              'document': {'id': '158895b0-406d-4a1d-91e5-f6e455cdc179',\n",
+      " 'sources': [{'id': 'c78a2488-bc95-4448-9c49-588ff94387e1',\n",
+      "              'document': {'id': '8c73c112-45a9-457d-ada8-87b3e63e5b9a',\n",
       "                           'name': 'document1.txt'},\n",
       "              'location': ''},\n",
-      "             {'id': 'b9a5271a-0e9f-453e-b919-8fd6179c9d8c',\n",
-      "              'document': {'id': '87bbbc51-e699-43bb-826c-a67fdfe1b5e6',\n",
+      "             {'id': '8784eae4-df01-43c1-bab0-3ac1ab7388b6',\n",
+      "              'document': {'id': 'd62a61ec-c877-403f-8723-19b647397edc',\n",
       "                           'name': 'document2.txt'},\n",
       "              'location': ''},\n",
-      "             {'id': '6cce5892-0723-4614-80fc-6912924c188e',\n",
-      "              'document': {'id': 'cfc9283c-247f-4362-9fc6-67bfa0d754f0',\n",
+      "             {'id': 'aab43ed1-b6b8-4cd3-addc-238fa1db4308',\n",
+      "              'document': {'id': 'fee18d75-175d-47c9-916a-3512178a450b',\n",
       "                           'name': 'document0.txt'},\n",
       "              'location': ''}],\n",
-      " 'timestamp': '2023-10-12T12:16:11.535061+00:00'}\n"
+      " 'timestamp': '2023-10-12T12:44:41.000387+00:00'}\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"DELETE /chats/c8436430-3017-4ec8-86e0-1ca099d97af6?user=Ragna HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:43564 - \"DELETE /chats/9d2e7a49-3030-4ea8-a2a2-1e0b7dad7f86?user=Ragna HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -568,7 +568,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:52656 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:43564 - \"GET /chats?user=Ragna HTTP/1.1\" 200 OK\n",
       "[]\n"
      ]
     }
