--- a/examples/s3_documents/s3_documents.ipynb
+++ b/examples/s3_documents/s3_documents.ipynb
@@ -135,6 +135,8 @@
        ".output_html .vi { color: #19177C } /* Name.Variable.Instance */\n",
        ".output_html .vm { color: #19177C } /* Name.Variable.Magic */\n",
        ".output_html .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class=\"highlight\"><pre><span></span><span class=\"kn\">import</span> <span class=\"nn\">os</span>\n",
+       "\n",
+       "<span class=\"kn\">import</span> <span class=\"nn\">uuid</span>\n",
        "<span class=\"kn\">from</span> <span class=\"nn\">typing</span> <span class=\"kn\">import</span> <span class=\"n\">Any</span>\n",
        "\n",
        "<span class=\"kn\">from</span> <span class=\"nn\">ragna.assistant</span> <span class=\"kn\">import</span> <span class=\"n\">RagnaDemoAssistant</span>\n",
@@ -156,7 +158,7 @@
        "\n",
        "    <span class=\"nd\">@classmethod</span>\n",
        "    <span class=\"k\">async</span> <span class=\"k\">def</span> <span class=\"nf\">get_upload_info</span><span class=\"p\">(</span>\n",
-       "        <span class=\"bp\">cls</span><span class=\"p\">,</span> <span class=\"o\">*</span><span class=\"p\">,</span> <span class=\"n\">config</span><span class=\"p\">:</span> <span class=\"n\">Config</span><span class=\"p\">,</span> <span class=\"n\">user</span><span class=\"p\">:</span> <span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"nb\">id</span><span class=\"p\">:</span> <span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"n\">name</span><span class=\"p\">:</span> <span class=\"nb\">str</span>\n",
+       "        <span class=\"bp\">cls</span><span class=\"p\">,</span> <span class=\"o\">*</span><span class=\"p\">,</span> <span class=\"n\">config</span><span class=\"p\">:</span> <span class=\"n\">Config</span><span class=\"p\">,</span> <span class=\"n\">user</span><span class=\"p\">:</span> <span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"nb\">id</span><span class=\"p\">:</span> <span class=\"n\">uuid</span><span class=\"o\">.</span><span class=\"n\">UUID</span><span class=\"p\">,</span> <span class=\"n\">name</span><span class=\"p\">:</span> <span class=\"nb\">str</span>\n",
        "    <span class=\"p\">)</span> <span class=\"o\">-&gt;</span> <span class=\"nb\">tuple</span><span class=\"p\">[</span><span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"nb\">dict</span><span class=\"p\">[</span><span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"n\">Any</span><span class=\"p\">],</span> <span class=\"nb\">dict</span><span class=\"p\">[</span><span class=\"nb\">str</span><span class=\"p\">,</span> <span class=\"n\">Any</span><span class=\"p\">]]:</span>\n",
        "        <span class=\"k\">if</span> <span class=\"ow\">not</span> <span class=\"n\">PackageRequirement</span><span class=\"p\">(</span><span class=\"s2\">&quot;boto3&quot;</span><span class=\"p\">)</span><span class=\"o\">.</span><span class=\"n\">is_available</span><span class=\"p\">():</span>\n",
        "            <span class=\"k\">raise</span> <span class=\"n\">RagnaException</span><span class=\"p\">()</span>\n",
@@ -210,6 +212,8 @@
       "text/latex": [
        "\\begin{Verbatim}[commandchars=\\\\\\{\\}]\n",
        "\\PY{k+kn}{import} \\PY{n+nn}{os}\n",
+       "\n",
+       "\\PY{k+kn}{import} \\PY{n+nn}{uuid}\n",
        "\\PY{k+kn}{from} \\PY{n+nn}{typing} \\PY{k+kn}{import} \\PY{n}{Any}\n",
        "\n",
        "\\PY{k+kn}{from} \\PY{n+nn}{ragna}\\PY{n+nn}{.}\\PY{n+nn}{assistant} \\PY{k+kn}{import} \\PY{n}{RagnaDemoAssistant}\n",
@@ -231,7 +235,7 @@
        "\n",
        "    \\PY{n+nd}{@classmethod}\n",
        "    \\PY{k}{async} \\PY{k}{def} \\PY{n+nf}{get\\PYZus{}upload\\PYZus{}info}\\PY{p}{(}\n",
-       "        \\PY{n+nb+bp}{cls}\\PY{p}{,} \\PY{o}{*}\\PY{p}{,} \\PY{n}{config}\\PY{p}{:} \\PY{n}{Config}\\PY{p}{,} \\PY{n}{user}\\PY{p}{:} \\PY{n+nb}{str}\\PY{p}{,} \\PY{n+nb}{id}\\PY{p}{:} \\PY{n+nb}{str}\\PY{p}{,} \\PY{n}{name}\\PY{p}{:} \\PY{n+nb}{str}\n",
+       "        \\PY{n+nb+bp}{cls}\\PY{p}{,} \\PY{o}{*}\\PY{p}{,} \\PY{n}{config}\\PY{p}{:} \\PY{n}{Config}\\PY{p}{,} \\PY{n}{user}\\PY{p}{:} \\PY{n+nb}{str}\\PY{p}{,} \\PY{n+nb}{id}\\PY{p}{:} \\PY{n}{uuid}\\PY{o}{.}\\PY{n}{UUID}\\PY{p}{,} \\PY{n}{name}\\PY{p}{:} \\PY{n+nb}{str}\n",
        "    \\PY{p}{)} \\PY{o}{\\PYZhy{}}\\PY{o}{\\PYZgt{}} \\PY{n+nb}{tuple}\\PY{p}{[}\\PY{n+nb}{str}\\PY{p}{,} \\PY{n+nb}{dict}\\PY{p}{[}\\PY{n+nb}{str}\\PY{p}{,} \\PY{n}{Any}\\PY{p}{]}\\PY{p}{,} \\PY{n+nb}{dict}\\PY{p}{[}\\PY{n+nb}{str}\\PY{p}{,} \\PY{n}{Any}\\PY{p}{]}\\PY{p}{]}\\PY{p}{:}\n",
        "        \\PY{k}{if} \\PY{o+ow}{not} \\PY{n}{PackageRequirement}\\PY{p}{(}\\PY{l+s+s2}{\\PYZdq{}}\\PY{l+s+s2}{boto3}\\PY{l+s+s2}{\\PYZdq{}}\\PY{p}{)}\\PY{o}{.}\\PY{n}{is\\PYZus{}available}\\PY{p}{(}\\PY{p}{)}\\PY{p}{:}\n",
        "            \\PY{k}{raise} \\PY{n}{RagnaException}\\PY{p}{(}\\PY{p}{)}\n",
@@ -284,6 +288,8 @@
       ],
       "text/plain": [
        "import os\n",
+       "\n",
+       "import uuid\n",
        "from typing import Any\n",
        "\n",
        "from ragna.assistant import RagnaDemoAssistant\n",
@@ -305,7 +311,7 @@
        "\n",
        "    @classmethod\n",
        "    async def get_upload_info(\n",
-       "        cls, *, config: Config, user: str, id: str, name: str\n",
+       "        cls, *, config: Config, user: str, id: uuid.UUID, name: str\n",
        "    ) -> tuple[str, dict[str, Any], dict[str, Any]]:\n",
        "        if not PackageRequirement(\"boto3\").is_available():\n",
        "            raise RagnaException()\n",
@@ -373,9 +379,9 @@
    "id": "4088eb70-5f90-4458-bebe-a042b79a9502",
    "metadata": {},
    "source": [
-    "- `get_upload_info`: This method is called when the client hits the `/document/new` endpoint of the API. Here we generate the presigned URL and return the necessary information to the client so they can upload their file directly to S3\n",
-    "- `is_available`: This method is called when the client hits the `/chat/new` endpoint of the API. If the upload was not performed or failed, the API refuses to create a new chat with the specified document.\n",
-    "- `read`: This method is called when the client hits the `/chat/{id}/start` endpoint of the API, to store the content in the selected source storage\n",
+    "- `get_upload_info`: This method is called when the client hits the `/document` endpoint of the API. Here we generate the presigned URL and return the necessary information to the client so they can upload their file directly to S3\n",
+    "- `is_available`: This method is called when the client hits the `/chat` endpoint of the API. If the upload was not performed or failed, the API refuses to create a new chat with the specified document.\n",
+    "- `read`: This method is called when the client hits the `/chat/{id}/prepare` endpoint of the API, to store the content in the selected source storage\n",
     "\n",
     "From this point on, this notebook is a reduced version of the REST API example."
    ]
@@ -419,7 +425,25 @@
    "execution_count": 5,
    "id": "ae31bfb0-01f6-47c8-9733-ba1204b153d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [33447]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:31476 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:51534 - \"GET / HTTP/1.1\" 200 OK\n"
+     ]
+    }
+   ],
    "source": [
     "import contextlib\n",
     "import subprocess\n",
@@ -435,7 +459,7 @@
     "start = time.time()\n",
     "while (time.time() - start) < timeout:\n",
     "    with contextlib.suppress(httpx.ConnectError):\n",
-    "        response = await client.get(f\"{URL}/health\")\n",
+    "        response = await client.get(URL)\n",
     "        if response.is_success:\n",
     "            break\n",
     "\n",
@@ -473,8 +497,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImIyZDRkNTgwLTA0OGQtNDBkMS1iMzljLTk1NGFmNDI5OTMwOSIsImV4cCI6MTY5Njg3Nzk4Mi4yOTA1NTk1fQ.0rVxqW0h5A3c8CJmp-roaRFUoJ7IAc4zUsQHJL2RuaU'},\n",
-      " 'document': {'id': 'b2d4d580-048d-40d1-b39c-954af4299309',\n",
+      "INFO:     127.0.0.1:51534 - \"GET /document?user=Ragna&name=document0.txt HTTP/1.1\" 200 OK\n",
+      "{'data': {'token': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjoiUmFnbmEiLCJpZCI6ImFkMWIwMWI1LTM0MjMtNDUxZS1hOWVlLTVlY2U5M2RlNGVlNiIsImV4cCI6MTY5NzExNTAxMC4yOTIwMTE1fQ.UOdIsvuWGV5NluQd1LrcMGjptLUnwmCSQIxn8UOEiUo'},\n",
+      " 'document': {'id': 'ad1b01b5-3423-451e-a9ee-5ece93de4ee6',\n",
       "              'name': 'document0.txt'},\n",
       " 'url': 'http://127.0.0.1:31476/document'}\n"
      ]
@@ -496,7 +521,15 @@
    "execution_count": 8,
    "id": "fdc5c6f4-bcf8-4902-b441-768b6e3a66bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:51534 - \"POST /document HTTP/1.1\" 200 OK\n"
+     ]
+    }
+   ],
    "source": [
     "response = await client.post(\n",
     "    document_info[\"url\"],\n",
@@ -513,11 +546,21 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:51534 - \"GET /document?user=Ragna&name=document1.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51534 - \"POST /document HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51534 - \"GET /document?user=Ragna&name=document2.txt HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51534 - \"POST /document HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[{'id': 'b2d4d580-048d-40d1-b39c-954af4299309', 'name': 'document0.txt'},\n",
-       " {'id': '525728e0-d478-4bce-8fdc-9f8b92f0cfe2', 'name': 'document1.txt'},\n",
-       " {'id': '308a261b-47a8-43b6-80aa-4c3c12549f99', 'name': 'document2.txt'}]"
+       "[{'id': 'ad1b01b5-3423-451e-a9ee-5ece93de4ee6', 'name': 'document0.txt'},\n",
+       " {'id': '7d901c1f-3638-4057-a1d2-6238e0a7601f', 'name': 'document1.txt'},\n",
+       " {'id': '19976a75-daf8-492c-8c9e-5075a9b7ca12', 'name': 'document2.txt'}]"
       ]
      },
      "execution_count": 9,
@@ -549,9 +592,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:51534 - \"POST /chats?user=Ragna HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'http://127.0.0.1:31476/chats/29e99963-08e9-4006-8b07-2f76e499a9c3'"
+       "'http://127.0.0.1:31476/chats/0a0fb603-77b8-44c8-8b18-9697be529af6'"
       ]
      },
      "execution_count": 10,
@@ -566,7 +616,7 @@
     "        params={\"user\": USER},\n",
     "        json={\n",
     "            \"name\": \"Ragna REST API example\",\n",
-    "            \"document_ids\": [d[\"id\"] for d in documents],\n",
+    "            \"documents\": documents,\n",
     "            \"source_storage\": \"Ragna/DemoSourceStorage\",\n",
     "            \"assistant\": \"Ragna/DemoAssistant\",\n",
     "            \"params\": {},\n",
@@ -588,6 +638,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "INFO:     127.0.0.1:51534 - \"POST /chats/0a0fb603-77b8-44c8-8b18-9697be529af6/prepare?user=Ragna HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:51534 - \"POST /chats/0a0fb603-77b8-44c8-8b18-9697be529af6/answer?user=Ragna&prompt=Hello%20World%21 HTTP/1.1\" 200 OK\n",
       "I can't really help you with your prompt:\n",
       "\n",
       "> Hello World!\n",
@@ -601,7 +653,7 @@
     }
    ],
    "source": [
-    "await client.post(f\"{CHAT_URL}/start\", params={\"user\": USER})\n",
+    "await client.post(f\"{CHAT_URL}/prepare\", params={\"user\": USER})\n",
     "answer = (\n",
     "    await client.post(\n",
     "        f\"{CHAT_URL}/answer\", params={\"user\": USER, \"prompt\": \"Hello World!\"}\n",
