--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -19,6 +19,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "platform/c++/implementation/internal.cpp:205:reinit_singlethreaded(): Reinitialising as single-threaded.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'0.1.dev29+g03721c7.d20231009084220'"
@@ -37,30 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5a3759a6-ffb0-47f7-be40-cf9d62fc67da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Config(local_cache_root=PosixPath('/home/philip/.cache/ragna'), state_database_url='sqlite://', queue_database_url='memory', ragna_api_url='http://127.0.0.1:31476', ragna_ui_url='http://127.0.0.1:31477', document_class=<class 'ragna.core.LocalDocument'>, upload_token_secret='9ffa4b72f96f221953a455df1642304af954a0afa7d147ae96cc1aa62a89ed02', upload_token_ttl=30, registered_source_storage_classes={'Ragna/DemoSourceStorage': <class 'ragna.source_storage._demo.RagnaDemoSourceStorage'>}, registered_assistant_classes={'Ragna/DemoAssistant': <class 'ragna.assistant._demo.RagnaDemoAssistant'>})"
+       "Config(local_cache_root=PosixPath('~/.cache/ragna'), rag=RagConfig(database_url='memory', queue_url='memory', document=<class 'ragna.core.LocalDocument'>, source_storages=[<class 'ragna.source_storages.RagnaDemoSourceStorage'>], assistants=[<class 'ragna.assistants.RagnaDemoAssistant'>]), api=ApiConfig(url=Url('http://127.0.0.1:31476/'), upload_token_secret=SecretStr('**********'), upload_token_ttl=300), ui=UiConfig(url=Url('http://127.0.0.1:31476/')))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ragna import demo_config, Config\n",
+    "from ragna import Config\n",
     "\n",
-    "demo_config"
+    "config = Config()\n",
+    "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "87613cac-44ba-4b85-ad3e-a1127dd65aa5",
    "metadata": {},
    "outputs": [],
@@ -73,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "818ff37c-d693-44b2-9d56-104eb2d86f59",
    "metadata": {},
    "outputs": [
@@ -93,18 +101,10 @@
    ],
    "source": [
     "from ragna.core import Rag\n",
-    "from ragna.assistant import (\n",
-    "    RagnaDemoAssistant,\n",
-    "    OpenaiGpt35Turbo16kAssistant,\n",
-    "    OpenaiGpt4Assistant,\n",
-    ")\n",
-    "from ragna.source_storage import (\n",
-    "    ChromaSourceStorage,\n",
-    "    RagnaDemoSourceStorage,\n",
-    "    LanceDBSourceStorage,\n",
-    ")\n",
+    "from ragna.assistants import RagnaDemoAssistant, Gpt35Turbo16k, Gpt4\n",
+    "from ragna.source_storages import Chroma, RagnaDemoSourceStorage, LanceDB\n",
     "\n",
-    "rag = Rag(demo_config)\n",
+    "rag = Rag(config)\n",
     "\n",
     "async with rag.chat(\n",
     "    documents=[document_path],\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "4c2f04c8-a0e1-47fc-a900-bc03b91088a2",
    "metadata": {},
    "outputs": [
@@ -127,10 +127,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7fa6a15e48c0>,\n",
-      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7fa6a15e4b40>,\n",
-      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7fa6a15e4bc0>,\n",
-      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7fa6a15e4c40>}\n"
+      "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f66e654ccc0>,\n",
+      " ('Chroma', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f66e654c640>,\n",
+      " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): <coroutine object answer_prompt at 0x7f66e654c540>,\n",
+      " ('LanceDB', 'OpenAI/gpt-4'): <coroutine object answer_prompt at 0x7f66e65cd640>}\n"
      ]
     }
    ],
@@ -139,8 +139,8 @@
     "import asyncio\n",
     "from pprint import pprint\n",
     "\n",
-    "source_storages = [ChromaSourceStorage, LanceDBSourceStorage]\n",
-    "assistants = [OpenaiGpt35Turbo16kAssistant, OpenaiGpt4Assistant]\n",
+    "source_storages = [Chroma, LanceDB]\n",
+    "assistants = [Gpt35Turbo16k, Gpt4]\n",
     "\n",
     "\n",
     "async def answer_prompt(source_storage, assistant):\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "d125a99d-51c2-4008-b49b-0c648abdb9e0",
    "metadata": {},
    "outputs": [
@@ -178,25 +178,20 @@
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
       "{('Chroma', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source RAG '\n",
-      "                                         '(Response Analysis Graph) '\n",
+      "                                         '(Retrieve, Analyze, Generate) '\n",
       "                                         'orchestration app. It is designed to '\n",
-      "                                         'help users create conversational AI '\n",
-      "                                         'applications by providing a '\n",
-      "                                         'framework for managing and '\n",
-      "                                         'orchestrating the flow of '\n",
-      "                                         'conversations. Ragna allows '\n",
-      "                                         'developers to define conversation '\n",
-      "                                         'flows, handle user inputs, and '\n",
-      "                                         'generate dynamic responses based on '\n",
-      "                                         'predefined rules and logic. It is '\n",
+      "                                         'assist in the creation and '\n",
+      "                                         'management of conversational AI '\n",
+      "                                         'models. Ragna provides a '\n",
+      "                                         'user-friendly interface for '\n",
+      "                                         'developers to retrieve data, analyze '\n",
+      "                                         'it, and generate responses. It is '\n",
       "                                         'built on top of the Rasa framework '\n",
-      "                                         'and provides additional features and '\n",
-      "                                         'functionalities to simplify the '\n",
-      "                                         'development process.',\n",
-      " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app. '\n",
-      "                             'Unfortunately, without additional context or '\n",
-      "                             \"sources, I can't provide more detailed \"\n",
-      "                             'information about it.',\n",
+      "                                         'and can be used to train and deploy '\n",
+      "                                         'AI models for various applications '\n",
+      "                                         'such as chatbots and virtual '\n",
+      "                                         'assistants.',\n",
+      " ('Chroma', 'OpenAI/gpt-4'): 'Ragna is an open-source RAG orchestration app.',\n",
       " ('LanceDB', 'OpenAI/gpt-3.5-turbo-16k'): 'Ragna is an open-source rag '\n",
       "                                          'orchestration app. It is a software '\n",
       "                                          'application that allows users to '\n",
