--- a/examples/local_llm/local_llm.ipynb
+++ b/examples/local_llm/local_llm.ipynb
@@ -3,32 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3020f7f6-8a50-4eaf-b9bf-b320fda5d67f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ragna.core import PackageRequirement\n",
-    "\n",
-    "for requirement in [\n",
-    "    PackageRequirement(\"torch\"),\n",
-    "    PackageRequirement(\"optimum\"),\n",
-    "    PackageRequirement(\"auto-gptq\"),\n",
-    "]:\n",
-    "    assert requirement.is_available(), requirement\n",
-    "\n",
-    "import torch\n",
-    "\n",
-    "assert torch.cuda.is_available()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "68349291-a5dd-41cb-b686-0f9101018ef0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "platform/c++/implementation/internal.cpp:205:reinit_singlethreaded(): Reinitialising as single-threaded.\n"
+     ]
+    }
+   ],
    "source": [
-    "from ragna.core import Assistant\n",
+    "from ragna.core import PackageRequirement, Assistant, Source\n",
     "\n",
     "\n",
     "class AiroborosAssistant(Assistant):\n",
@@ -71,11 +58,13 @@
     "        )\n",
     "\n",
     "    @property\n",
-    "    def max_input_size(self):\n",
+    "    def max_input_size(self) -> int:\n",
     "        # FIXME\n",
     "        return 1024\n",
     "\n",
-    "    def answer(self, prompt, sources):\n",
+    "    def answer(\n",
+    "        self, prompt: str, sources: list[Source], *, max_new_tokens: int = 256\n",
+    "    ) -> str:\n",
     "        template = \"\"\"\n",
     "        A chat about the content of documents.\n",
     "        Only use the content listed below to answer any questions from the user.\n",
@@ -96,11 +85,8 @@
     "        ).input_ids.cuda()\n",
     "        output_ids = self.model.generate(\n",
     "            inputs=input_ids,\n",
-    "            temperature=0.7,\n",
-    "            do_sample=True,\n",
-    "            top_p=0.95,\n",
-    "            top_k=40,\n",
-    "            max_new_tokens=512,\n",
+    "            do_sample=False,\n",
+    "            max_new_tokens=max_new_tokens,\n",
     "        )\n",
     "        output = self.tokenizer.decode(output_ids[0])\n",
     "        return output.rsplit(\"ASSISTANT:\", 1)[-1].replace(\"</s>\", \"\").strip()\n",
@@ -111,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7f4a5263-6d5c-4505-bcbe-d74ce96144ed",
    "metadata": {},
    "outputs": [
@@ -127,13 +113,13 @@
      "output_type": "stream",
      "text": [
       "User: What is Ragna?\n",
-      "Assistant: Ragna is an OSS app for RAG workflows that offers a Python and REST API as well as web UI.\n"
+      "Assistant: Ragna is an open-source application for RAG workflows. It offers a Python and REST API as well as a web UI.\n"
      ]
     }
    ],
    "source": [
     "from ragna.core import Rag\n",
-    "from ragna.source_storage import RagnaDemoSourceStorage\n",
+    "from ragna.source_storages import RagnaDemoSourceStorage\n",
     "\n",
     "rag = Rag()\n",
     "\n",
