--- a/examples/rest_api/rest_api.ipynb
+++ b/examples/rest_api/rest_api.ipynb
@@ -142,7 +142,7 @@
     "USER = \"Ragna\"\n",
     "\n",
     "response = await client.get(\"/chats\", params={\"user\": USER})\n",
-    "pprint(response.json())"
+    "pprint(response.json(), sort_dicts=False)"
    ]
   },
   {
@@ -239,7 +239,7 @@
     "response = await client.get(\"/document\", params={\"user\": USER, \"name\": path.name})\n",
     "document_info = response.json()\n",
     "document = document_info[\"document\"]\n",
-    "pprint(document_info)"
+    "pprint(document_info, sort_dicts=False)"
    ]
   },
   {
