--- a/examples/local_llm/local_llm.ipynb
+++ b/examples/local_llm/local_llm.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "from ragna.core import PackageRequirement, Assistant, Source\n",
+    "from ragna.core import Assistant, PackageRequirement, Source\n",
     "\n",
     "\n",
     "class AiroborosAssistant(Assistant):\n",
@@ -44,8 +44,8 @@
     "    def __init__(self, config):\n",
     "        super().__init__(config)\n",
     "\n",
-    "        from transformers import AutoTokenizer\n",
     "        from auto_gptq import AutoGPTQForCausalLM\n",
+    "        from transformers import AutoTokenizer\n",
     "\n",
     "        self.tokenizer = AutoTokenizer.from_pretrained(str(self), use_fast=True)\n",
     "        self.model = AutoGPTQForCausalLM.from_quantized(\n",
