--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -100,9 +100,9 @@
     }
    ],
    "source": [
+    "from ragna.assistants import Gpt4, Gpt35Turbo16k, RagnaDemoAssistant\n",
     "from ragna.core import Rag\n",
-    "from ragna.assistants import RagnaDemoAssistant, Gpt35Turbo16k, Gpt4\n",
-    "from ragna.source_storages import Chroma, RagnaDemoSourceStorage, LanceDB\n",
+    "from ragna.source_storages import Chroma, LanceDB, RagnaDemoSourceStorage\n",
     "\n",
     "rag = Rag(config)\n",
     "\n",
@@ -135,8 +135,8 @@
     }
    ],
    "source": [
-    "import itertools\n",
     "import asyncio\n",
+    "import itertools\n",
     "from pprint import pprint\n",
     "\n",
     "source_storages = [Chroma, LanceDB]\n",
