--- a/examples/s3_documents/s3_documents.ipynb
+++ b/examples/s3_documents/s3_documents.ipynb
@@ -599,9 +599,9 @@
    ],
    "source": [
     "import contextlib\n",
+    "import os\n",
     "import subprocess\n",
     "import time\n",
-    "import os\n",
     "\n",
     "import httpx\n",
     "\n",
@@ -781,7 +781,7 @@
    "source": [
     "chat = (\n",
     "    await client.post(\n",
-    "        f\"/chats\",\n",
+    "        \"/chats\",\n",
     "        params={\"user\": USER},\n",
     "        json={\n",
     "            \"name\": \"Ragna REST API example\",\n",
