Apply suggestions from code review: typo fixes

--- a/examples/python_api/python_api.ipynb
+++ b/examples/python_api/python_api.ipynb
@@ -141,8 +141,8 @@
     "from pprint import pprint\n",
     "\n",
     "from ragna.assistants import (\n",
-    "    Claude1Instant,\n",
-    "    Claude2,\n",
+    "    ClaudeInstant,\n",
+    "    Claude,\n",
     "    Gpt4,\n",
     "    Gpt35Turbo16k,\n",
     "    Mpt7bInstruct,\n",
@@ -154,8 +154,8 @@
     "assistants = [\n",
     "    Gpt35Turbo16k,\n",
     "    Gpt4,\n",
-    "    Claude1Instant,\n",
-    "    Claude2,\n",
+    "    ClaudeInstant,\n",
+    "    Claude,\n",
     "    Mpt7bInstruct,\n",
     "    Mpt30bInstruct,\n",
     "]\n",
